@@ -57,6 +57,34 @@ public:
 	BeliefTablePtr btab,
 	NewConcurrentMessageDispatcherPtr md);
 
+  void
+  solve(std::size_t ctx_id,
+	std::size_t k1,
+	std::size_t k2,
+	Heads* heads,
+	BeliefTablePtr btab,
+	NewConcurrentMessageDispatcherPtr md);
+
+private:
+  void
+  read_all(std::size_t ctx_id,
+	   Heads* heads,
+	   BeliefTablePtr btab,
+	   NewConcurrentMessageDispatcherPtr md);
+
+  void
+  read_until_k2(std::size_t ctx_id, 
+		std::size_t k1,
+		std::size_t k2,
+		Heads* heads,
+		BeliefTablePtr btab,
+		NewConcurrentMessageDispatcherPtr md);
+
+  void
+  reset_process(std::size_t ctx_id,
+		Heads* heads,
+		BeliefTablePtr btab);
+
 private:
   DLVProcess* proc;
   Options options;
